--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="header">
-            <h1>🚢 Titanic Survival</h1>
+            <h1>🚢 Prediccion Titanic</h1>
             <div class="wave"></div>
         </div>
 
